# traffic-light-detection

./: .gitignore  README.md  TASK.md  atlas.yaml  chain_minfer_s1024.sh  csv_to_tb.py  dummy_tld_predictions.csv  epoch_ping.sh  overfit_guard.sh  predict.py  predict_rfdetr.py  predictions.csv  pyproject.toml  queue_s1024.sh  reorg_for_rfdetr.py  tile_dataset.py  train.py  train_rfdetr.py  train_rtdetr.py
.agent/: CHANGELOG.md  README.md  project_architecture.md
deliverables/: erklaerung.txt
deliverables/code/: README.md  atlas.yaml  predict_ensemble.py  predict_tiled.py  train_yolo12.py
