[project]
name = "ml2-tld"
version = "0.1.0"
description = "ML2 bonus — Traffic Light Detection with Ultralytics YOLO"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.4.0",  # YOLO26 support (8.4.70 = latest as of 2026-06)
    "torch",
    "torchvision",
    "pandas",
    "ensemble-boxes",  # Weighted Box Fusion for the 3-model ensemble (predict_ensemble.py)
    "tensorboard",  # Ultralytics auto-logs to TB when installed (view: tensorboard --logdir runs/detect)
]

[tool.uv]
# CPU-only torch is fine for inference; for training prefer a CUDA build / Colab.
